blackboard_ws/log/build_2021-11-23_14-06-57/bbinstance/stdout_stderr.log
running egg_info
writing ../../build/bbinstance/bbinstance.egg-info/PKG-INFO
writing dependency_links to ../../build/bbinstance/bbinstance.egg-info/dependency_links.txt
writing entry points to ../../build/bbinstance/bbinstance.egg-info/entry_points.txt
writing requirements to ../../build/bbinstance/bbinstance.egg-info/requires.txt
writing top-level names to ../../build/bbinstance/bbinstance.egg-info/top_level.txt
reading manifest file '../../build/bbinstance/bbinstance.egg-info/SOURCES.txt'
writing manifest file '../../build/bbinstance/bbinstance.egg-info/SOURCES.txt'
running build
running build_py
copying bbinstance/robotInstance2.py -> /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance
copying bbinstance/robotInstance3.py -> /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance
copying bbinstance/robotInstance4.py -> /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance
copying bbinstance/robotInstance.py -> /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance
copying bbinstance/multi subscriber.py -> /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance
copying bbinstance/markers.py -> /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance
copying bbinstance/robotInstance5.py -> /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance
copying bbinstance/interface.py -> /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance
copying bbinstance/monitor.py -> /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance
copying bbinstance/blackboardinstance.py.py -> /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance
copying bbinstance/taskview.py -> /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance
copying bbinstance/gui.py -> /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance
copying bbinstance/multi publisher.py -> /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance
copying bbinstance/blackboardinstance.py -> /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance
running install
running install_lib
copying /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance/robotInstance2.py -> /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance
copying /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance/robotInstance3.py -> /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance
copying /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance/robotInstance4.py -> /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance
copying /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance/robotInstance.py -> /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance
copying /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance/multi subscriber.py -> /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance
copying /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance/markers.py -> /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance
copying /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance/robotInstance5.py -> /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance
copying /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance/interface.py -> /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance
copying /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance/monitor.py -> /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance
copying /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance/blackboardinstance.py.py -> /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance
copying /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance/taskview.py -> /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance
copying /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance/gui.py -> /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance
copying /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance/multi publisher.py -> /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance
copying /home/mpcmeulensteen/blackboard_ws/build/bbinstance/build/lib/bbinstance/blackboardinstance.py -> /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance
byte-compiling /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/robotInstance2.py to robotInstance2.cpython-38.pyc
byte-compiling /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/robotInstance3.py to robotInstance3.cpython-38.pyc
byte-compiling /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/robotInstance4.py to robotInstance4.cpython-38.pyc
byte-compiling /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/robotInstance.py to robotInstance.cpython-38.pyc
byte-compiling /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/multi subscriber.py to multi subscriber.cpython-38.pyc
byte-compiling /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/markers.py to markers.cpython-38.pyc
  File "/home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/markers.py", line 55
    print "Shutting down node"
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("Shutting down node")?

byte-compiling /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/robotInstance5.py to robotInstance5.cpython-38.pyc
byte-compiling /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/interface.py to interface.cpython-38.pyc
/home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/interface.py:50: SyntaxWarning: "is" with a literal. Did you mean "=="?
  if choice is '1':
/home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/interface.py:55: SyntaxWarning: "is" with a literal. Did you mean "=="?
  if taskType is 1:
/home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/interface.py:64: SyntaxWarning: "is" with a literal. Did you mean "=="?
  if taskType is 2:
/home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/interface.py:78: SyntaxWarning: "is" with a literal. Did you mean "=="?
  if taskType is 3:
/home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/interface.py:92: SyntaxWarning: "is" with a literal. Did you mean "=="?
  if taskType is 4:
/home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/interface.py:127: SyntaxWarning: "is" with a literal. Did you mean "=="?
  if choice is '2':
byte-compiling /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/monitor.py to monitor.cpython-38.pyc
byte-compiling /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/blackboardinstance.py.py to blackboardinstance.py.cpython-38.pyc
byte-compiling /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/taskview.py to taskview.cpython-38.pyc
/home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/taskview.py:102: SyntaxWarning: "is not" with a literal. Did you mean "!="?
  if t.taskState is not 2:
byte-compiling /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/gui.py to gui.cpython-38.pyc
byte-compiling /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/multi publisher.py to multi publisher.cpython-38.pyc
byte-compiling /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/blackboardinstance.py to blackboardinstance.cpython-38.pyc
running install_data
running install_egg_info
removing '/home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/bbinstance/bbinstance.egg-info to /home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance-0.0.0-py3.8.egg-info
running install_scripts
writing list of installed files to '/home/mpcmeulensteen/blackboard_ws/build/bbinstance/install.log'
